@@ -1,0 +1,149 @@
+<configure
+    xmlns="http://namespaces.zope.org/five"
+    >
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATBTreeFolder"
+      package=".z3.interfaces"
+      name="IATBTreeFolder"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATCTTool"
+      package=".z3.interfaces"
+      name="IATCTTool"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATCTTopicsTool"
+      package=".z3.interfaces"
+      name="IATCTTopicsTool"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATContentType"
+      package=".z3.interfaces"
+      name="IATContentType"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATDocument"
+      package=".z3.interfaces"
+      name="IATDocument"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATEvent"
+      package=".z3.interfaces"
+      name="IATEvent"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATFavorite"
+      package=".z3.interfaces"
+      name="IATFavorite"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATFile"
+      package=".z3.interfaces"
+      name="IATFile"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATFolder"
+      package=".z3.interfaces"
+      name="IATFolder"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATImage"
+      package=".z3.interfaces"
+      name="IATImage"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATLink"
+      package=".z3.interfaces"
+      name="IATLink"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATNewsItem"
+      package=".z3.interfaces"
+      name="IATNewsItem"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATTopic"
+      package=".z3.interfaces"
+      name="IATTopic"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATTopicCriterion"
+      package=".z3.interfaces"
+      name="IATTopicCriterion"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATTopicSearchCriterion"
+      package=".z3.interfaces"
+      name="IATTopicSearchCriterion"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IATTopicSortCriterion"
+      package=".z3.interfaces"
+      name="IATTopicSortCriterion"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.ICalendarSupport"
+      package=".z3.interfaces"
+      name="ICalendarSupport"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IFileContent"
+      package=".z3.interfaces"
+      name="IFileContent"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IHistoryAware"
+      package=".z3.interfaces"
+      name="IHistoryAware"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.IImageContent"
+      package=".z3.interfaces"
+      name="IImageContent"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.ISelectableConstrainTypes"
+      package=".z3.interfaces"
+      name="ISelectableConstrainTypes"
+      /> 
+ 
+  <bridge
+      zope2="Products.ATContentTypes.interfaces.ITextContent"
+      package=".z3.interfaces"
+      name="ITextContent"
+      /> 
+
+  <bridge
+      zope2="Products.ATContentTypes.lib.autosort.IAutoSortSupport"
+      package=".z3.interfaces"
+      name="IAutoSortSupport"
+      /> 
+
+  <bridge
+      zope2="Products.ATContentTypes.lib.autosort.IAutoOrderSupport"
+      package=".z3.interfaces"
+      name="IAutoOrderSupport"
+      /> 
+
+</configure>
