@@ -1,0 +1,10 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    >
+
+  <include file="bridge.zcml"/>
+
+  <include file="implements.zcml"/>
+
+</configure>
+
