@@ -1,0 +1,171 @@
+<configure
+    xmlns="http://namespaces.zope.org/five"
+    >
+    
+  <!-- Content Types -->
+
+  <implements
+      class=".content.base.ATCTMixin"
+      interface=".z3.interfaces.IATContentType"
+      /> 
+
+  <implements
+      class=".content.base.ATCTFolderMixin"
+      interface=".z3.interfaces.ISelectableConstrainTypes"
+      />      
+  
+  <implements
+      class=".content.document.ATDocument"
+      interface=".z3.interfaces.IATDocument"
+      />   
+
+  <implements
+      class=".content.event.ATEvent"
+      interface=".z3.interfaces.IATEvent"
+      /> 
+
+  <implements
+      class=".content.favorite.ATFavorite"
+      interface=".z3.interfaces.IATFavorite"
+      /> 
+
+  <implements
+      class=".content.file.ATFile"
+      interface=".z3.interfaces.IATFile"
+      /> 
+
+  <implements
+      class=".content.folder.ATFolder"
+      interface=".z3.interfaces.IATFolder"
+      /> 
+
+  <implements
+      class=".content.folder.ATBTreeFolder"
+      interface=".z3.interfaces.IATBTreeFolder"
+      /> 
+ 
+  <implements
+      class=".content.image.ATImage"
+      interface=".z3.interfaces.IATImage"
+      /> 
+
+  <implements
+      class=".content.link.ATLink"
+      interface=".z3.interfaces.IATLink"
+      /> 
+
+  <implements
+      class=".content.newsitem.ATNewsItem"
+      interface=".z3.interfaces.IATNewsItem"
+      /> 
+
+  <implements
+      class=".content.topic.ATTopic"
+      interface=".z3.interfaces.IATTopic"
+      /> 
+
+  <!-- Criteria -->
+
+  <implements
+      class=".criteria.base.ATBaseCriterion"
+      interface=".z3.interfaces.IATTopicCriterion"
+      />
+
+  <implements
+      class=".criteria.boolean.ATBooleanCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+
+  <implements
+      class=".criteria.currentauthor.ATCurrentAuthorCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.date.ATDateCriteria"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.daterange.ATDateRangeCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.list.ATListCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.path.ATPathCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.portaltype.ATPortalTypeCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.reference.ATReferenceCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.selection.ATSelectionCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.simpleint.ATSimpleIntCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <implements
+      class=".criteria.simplestring.ATSimpleStringCriterion"
+      interface=".z3.interfaces.IATTopicSearchCriterion"
+      />
+ 
+  <!-- lib -->
+
+  <implements
+      class=".lib.autosort.AutoSortSupport"
+      interface=".z3.interfaces.IAutoSortSupport"
+      />
+
+  <implements
+      class=".lib.autosort.AutoOrderSupport"
+      interface=".z3.interfaces.IAutoOrderSupport"
+      />
+
+  <implements
+      class=".lib.calendarsupport.CalendarSupportMixin"
+      interface=".z3.interfaces.ICalendarSupport"
+      />  
+
+  <implements
+      class=".lib.constraintypes.ConstrainTypesMixin"
+      interface=".z3.interfaces.ISelectableConstrainTypes"
+      /> 
+
+  <implements
+      class=".lib.historyaware.HistoryAwareMixin"
+      interface=".z3.interfaces.IHistoryAware"
+      />
+
+  <!--implements
+      class=".lib.imagetransform.ATCTImageTransform"
+      interface=".z3.interfaces."
+      /--> 
+
+  <implements
+      class=".tool.atct.ATCTTool"
+      interface=".z3.interfaces.IATCTTool"
+      />
+
+  <implements
+      class=".tool.topic.ATTopicsTool"
+      interface=".z3.interfaces.IATCTTopicsTool"
+      />
+
+</configure>
