@@ -1,0 +1,24 @@
+#  ATContentTypes http://sf.net/projects/collective/
+#  Archetypes reimplementation of the CMF core types
+#  Copyright (c) 2003-2005 AT Content Types development team
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with this program; if not, write to the Free Software
+#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+"""ATContentTypes bridged interfaces
+
+bridge.zcml is adding bridged Zope3 style interfaces to this module. We are unable
+to add the bridged interfaces to Products.ATContentTypes.interfaces because they
+would overwrite the existing Zope2 interfaces.
+"""
